--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react-three-fiber": "^6.0.13",
     "scss": "^0.2.4",
     "styled-components": "^6.1.3",
-    "swiper": "^11.0.5",
-    "three": "^0.123.0"
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
