--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.2.0",
+    "react-scroll": "^1.9.0",
     "react-three-fiber": "^6.0.13",
     "scss": "^0.2.4",
     "styled-components": "^6.1.3",
